--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <p>White House officials said they were announcing the plan to inoculate children ages 5-11 before the vaccine was approved for that age group so they could be "operationally ready" to deploy the doses as soon as the approval came.</p>
 
-        <button>Fake It</button>
+        <button>Fake</button>
     </div>
     </body>
 </html>
