--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
     </head>
     <body>
         <div>
-        <h1>The U.S. is ready to roll out the COVID vaccine once it's approved for kids age 5-11</h1>
-        <p>The White House said on Wednesday that it is ready to quickly roll out COVID-19 vaccines for kids ages 5 to 11, if the Pfizer-BioNTech vaccine for that age group is authorized by <span class="noun">the Food and Drug Administration</span> and recommended by the Centers for Disease Control and Prevention.</p>
+        <h1>Nigeria to reject vaccine donations with short shelf lives</h1>
+        <p>Nigeria will no longer accept COVID-19 vaccines with short shelf lives after 1 million doses have expired in Africa's most population nation before the shots could be used, a government official said.</p>
 
-        <p>The administration has bought enough doses for all 28 million children in that age group, and will provide it in smaller packages with essential supplies like smaller needles to make it easier to get to physicians, pediatricians and community health centers, Biden administration officials said.</p>
+        <p>While some of the doses given to Nigeria were within a few months of expiring, authorities have said that other donated vaccines had just weeks left to be given to people before becoming unusable.</p>
 
-        <p>"Should the FDA and CDC authorize the vaccine, we will be ready to get shots in arms," said White House coronavirus response coordinator Jeff Zients during a news briefing Wednesday morning.</p>
+        <p>Faisal Shuaib, head of Nigeria’s National Primary Health Care Development Agency, told reporters that expired vaccines not used in time now will be destroyed. He did not specify what Nigerian officials would consider to be too short of a shelf life.</p>
 
-        <p>The vaccine could be cleared for use in <span class="noun">children ages 5-11</span> within a couple of weeks, officials said. The FDA's independent advisory committee meeting is scheduled for Oct. 26, and the CDC's independent advisory committee meeting is set for Nov. 2-3.</p>
+        <p>Nigeria has only been able to fully vaccinate 1.9% of its 206 million people. While at least 30 million doses are currently available, authorities say the rush to distribute almost-expired ones has created an additional burden.</p>
 
-        <p>The Pfizer vaccine currently has full approval for use in adults, and the federal government has authorized it for emergency use in children ages 12-17.</p>
+        <p>Other African countries also have struggled to use donated doses in time. Malawi burned nearly 20,000 expired vaccines earlier year and South Sudan also said it had to destroy tens of thousands of doses.</p>
 
-        <p>White House officials said they were announcing the plan to inoculate children ages 5-11 before the vaccine was approved for that age group so they could be "operationally ready" to deploy the doses as soon as the approval came.</p>
+        <p>Matshidiso Moeti, the World Health Organization’s regional director for Africa, said Tuesday that the problem of expiring vaccines is a global one. The number of doses that have gone unused in Africa has represented less than a quarter of 1%.</p>
+        
+        <p>“It is necessary to dispel the impression that even as we are expressing concern about access to vaccine supplies, there are millions of doses being wasted, expiring in Africa," she said. “That is not the case.”</p>
+            
+        <p>Two weeks after Nigeria recorded its first omicron variant case, the country is starting to see an increase in the number of new infections, Shuaib said. However, there has been no evidence so far of increased hospitalizations, he added.</p>    
 
         <button>Fake</button>
     </div>
