--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <body>
         <div>
         <h1>Nigeria to reject vaccine donations with short shelf lives</h1>
-        <p>Nigeria will no longer accept COVID-19 vaccines with short shelf lives after 1 million doses have expired in Africa's most population nation before the shots could be used, a government official said.</p>
+        <p>Nigeria will no longer accept COVID-19 vaccines with <span class="adjective">short</span> shelf lives after 1 million doses have expired in Africa's most population nation before the shots could be used, a government official said.</p>
 
         <p>While some of the doses given to Nigeria were within a few months of expiring, authorities have said that other donated vaccines had just weeks left to be given to people before becoming unusable.</p>
 
-        <p>Faisal Shuaib, head of Nigeria’s National Primary Health Care Development Agency, told reporters that expired vaccines not used in time now will be destroyed. He did not specify what Nigerian officials would consider to be too short of a shelf life.</p>
+        <p>Faisal Shuaib, head of Nigeria’s National Primary Health Care Development Agency, told reporters that <span class="adjective">expired</span> vaccines not used in time now will be destroyed. He did not specify what Nigerian officials would consider to be too short of a shelf life.</p>
 
         <p>Nigeria has only been able to fully vaccinate 1.9% of its 206 million people. While at least 30 million doses are currently available, authorities say the rush to distribute almost-expired ones has created an additional burden.</p>
 
-        <p>Other African countries also have struggled to use donated doses in time. Malawi burned nearly 20,000 expired vaccines earlier year and South Sudan also said it had to destroy tens of thousands of doses.</p>
+        <p>Other African countries also have struggled to <span class="verb">use</span> donated doses in time. Malawi burned nearly 20,000 expired vaccines earlier year and South Sudan also said it had to destroy tens of thousands of doses.</p>
 
-        <p>Matshidiso Moeti, the World Health Organization’s regional director for Africa, said Tuesday that the problem of expiring vaccines is a global one. The number of doses that have gone unused in Africa has represented less than a quarter of 1%.</p>
+        <p>Matshidiso Moeti, the World Health Organization’s regional director for <span class="noun">Africa</span>, said Tuesday that the problem of expiring vaccines is a global one. The number of doses that have gone unused in Africa has represented less than a quarter of 1%.</p>
         
-        <p>“It is necessary to dispel the impression that even as we are expressing concern about access to vaccine supplies, there are millions of doses being wasted, expiring in Africa," she said. “That is not the case.”</p>
+        <p>“It is necessary to dispel the <span class="noun">impression</span> that even as we are expressing concern about access to vaccine supplies, there are millions of doses being wasted, expiring in Africa," she said. “That is not the case.”</p>
             
         <p>Two weeks after Nigeria recorded its first omicron variant case, the country is starting to see an increase in the number of new infections, Shuaib said. However, there has been no evidence so far of increased hospitalizations, he added.</p>    
 
